# tempa

./: Cargo.toml  rust-toolchain.toml
tempa-firmware/: Cargo.toml
tempa-firmware/.cargo/: config.toml
tempa-firmware/src/: main.rs
tempa-ui/: Cargo.toml
tempa-ui-sim/: Cargo.toml
tempa-ui-sim/src/: main.rs
tempa-ui/src/: event.rs  lib.rs
tempa-ui/src/widgets/: button.rs  mod.rs
